Fix package name

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "google/recaptcha",
-    "description": "Client library for reCAPTCHA, a free service that protects websites from spam and abuse.",
+    "name": "snipershady/recaptcha",
+    "description": "Client library for reCAPTCHA, a free service that protects websites from spam and abuse. Now compliant with php 8.4",
     "type": "library",
     "keywords": ["recaptcha", "captcha", "spam", "abuse"],
     "homepage": "https://www.google.com/recaptcha/",
